traces/bug_129.txt
src/medit/inout_popenbinaire.c:208: error: DEAD_STORE
  The value written to &ppt (type spoint*) is never used.
Showing all 1 steps of the trace


src/medit/inout_popenbinaire.c:208:7: Write of unused value
206.   	
207.         }
208.         ppt = &mesh->point[k];
             ^
209.   
210.         break;
